force-app/main/default/objects/Claims_Progression__c/Claims_Progression__c.object-meta.xml
<CustomObject>
    <label>Claims Progression</label>
    <nameField>
        <label>Claims Progression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims Progressions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>