force-app/main/default/objects/Claims_Progression__c/fields/Date_of_Subrogation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Subrogation__c</fullName>
    <label>Date of Subrogation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>