force-app/main/default/objects/Claims_Progression__c/fields/Ex_gratia_payment__c.field-meta.xml
<CustomField>
    <fullName>Ex_gratia_payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ex-Gratia Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>