force-app/main/default/objects/Claims_Progression__c/fields/Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Original_Currency__c</fullName>
    <label>Original Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>