force-app/main/default/objects/Claims_Progression__c/fields/Policy_Holder_O_S__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_O_S__c</fullName>
    <formula>Policy_Holder_Reserve__c - Policy_Holder_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Holder O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>