force-app/main/default/objects/Claims_Progression__c/fields/Policy_Holder_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Reserve__c</fullName>
    <label>Policy Holder Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>