force-app/main/default/objects/Claims_Progression__c/fields/Rate_of_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Exchange__c</fullName>
    <label>Rate of Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ex1</fullName>
            </value>
            <value>
                <fullName>Ex2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>