force-app/main/default/objects/Claims_Progression__c/fields/Total_Expense_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Paid__c</fullName>
    <formula>VG_Claim_Expense_Paid__c + VG_Legal_Fee_Paid__c + VG_Adjustor_Fee_Paid__c + TPA_Fees_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expense Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>