force-app/main/default/objects/Claims_Progression__c/fields/Total_Expense_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Reserve__c</fullName>
    <formula>VG_Adjustor_Fee_Reserve__c + VG_Legal_Fee_Reserve__c + VG_Claim_Expense_Reserve__c + TPA_Fees_Estimate__c</formula>
    <label>Total Expense Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>