force-app/main/default/objects/Claims_Progression__c/fields/Total_Recovery_O_S__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_O_S__c</fullName>
    <formula>Total_Recovery_Reserve__c - Total_Recovery_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recovery O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>