force-app/main/default/objects/Claims_Progression__c/fields/Total_Recovery_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_Received__c</fullName>
    <formula>VG_Fraud_Recovered__c + VG_Salvage_Recovered__c +  VG_Subrogation_Recovered__c +  Policy_Holder_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recovery Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>