force-app/main/default/objects/Claims_Progression__c/fields/Total_Recovery_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_Reserve__c</fullName>
    <formula>VG_Fraud_Estimate__c + VG_Salvage_Estimate__c + VG_Subrogation_Estimate__c +  Policy_Holder_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recovery Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>