force-app/main/default/objects/Claims_Progression__c/fields/TPA_Fees_Estimate__c.field-meta.xml
<CustomField>
    <fullName>TPA_Fees_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TPA Fees Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>