force-app/main/default/objects/Claims_Progression__c/fields/TPA_Fees_O_S__c.field-meta.xml
<CustomField>
    <fullName>TPA_Fees_O_S__c</fullName>
    <formula>TPA_Fees_Estimate__c - TPA_Fees_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPA Fees O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>