force-app/main/default/objects/Claims_Progression__c/fields/VG_Account__c.field-meta.xml
<CustomField>
    <fullName>VG_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims Progressions</relationshipLabel>
    <relationshipName>Claims_Progressions</relationshipName>
    <type>Lookup</type>
</CustomField>