force-app/main/default/objects/Claims_Progression__c/fields/VG_Adjustor_Fee_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Adjustor_Fee_Out_Standing__c</fullName>
    <formula>VG_Adjustor_Fee_Reserve__c - VG_Adjustor_Fee_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustor Fee O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>