force-app/main/default/objects/Claims_Progression__c/fields/VG_Claim_Expense_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Claim_Expense_Out_Standing__c</fullName>
    <formula>VG_Claim_Expense_Reserve__c - VG_Claim_Expense_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Expense  O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>