force-app/main/default/objects/Claims_Progression__c/fields/VG_Claim_Expense_Paid__c.field-meta.xml
<CustomField>
    <fullName>VG_Claim_Expense_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Expense  Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>