force-app/main/default/objects/Claims_Progression__c/fields/VG_Claim_Expense_Reserve__c.field-meta.xml
<CustomField>
    <fullName>VG_Claim_Expense_Reserve__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Expense Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>