force-app/main/default/objects/Claims_Progression__c/fields/VG_Claims_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Claims_Schedule__c</fullName>
    <label>Claims Schedule</label>
    <referenceTo>Claims_Schedule__c</referenceTo>
    <relationshipLabel>Claims Progressions</relationshipLabel>
    <relationshipName>Claims_Progressions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>