force-app/main/default/objects/Claims_Progression__c/fields/VG_Fraud_Estimate__c.field-meta.xml
<CustomField>
    <fullName>VG_Fraud_Estimate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fraud Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>