force-app/main/default/objects/Claims_Progression__c/fields/VG_Fraud_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Fraud_Out_Standing__c</fullName>
    <formula>VG_Fraud_Estimate__c - VG_Fraud_Recovered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraud O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>