force-app/main/default/objects/Claims_Progression__c/fields/VG_Other_Recoery_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Other_Recoery_Out_Standing__c</fullName>
    <formula>VG_Other_Recovery_Estimate__c - VG_Other_Recovered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Recovery O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>