force-app/main/default/objects/Claims_Progression__c/fields/VG_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Out_Standing__c</fullName>
    <formula>VG_Reserve__c + Ex_gratia_payment__c - VG_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>