force-app/main/default/objects/Claims_Progression__c/fields/VG_Salvage_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Salvage_Out_Standing__c</fullName>
    <formula>VG_Salvage_Estimate__c - VG_Salvage_Recovered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salvage O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>