force-app/main/default/objects/Claims_Progression__c/fields/VG_Subrogation_Out_Standing__c.field-meta.xml
<CustomField>
    <fullName>VG_Subrogation_Out_Standing__c</fullName>
    <formula>VG_Subrogation_Estimate__c -  VG_Subrogation_Recovered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subrogation O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>