force-app/main/default/objects/Claims_Progression__c/fields/VG_Subrogation_Recovered__c.field-meta.xml
<CustomField>
    <fullName>VG_Subrogation_Recovered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subrogation Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>