force-app/main/default/objects/Claims_Progression__c/recordTypes/VG_Claim_Expense.recordType-meta.xml
<RecordType>
    <fullName>VG_Claim_Expense</fullName>
    <active>true</active>
    <label>Claim Expense</label>
</RecordType>