force-app/main/default/objects/Claims_Progression__c/recordTypes/VG_Claim_Financial.recordType-meta.xml
<RecordType>
    <fullName>VG_Claim_Financial</fullName>
    <active>true</active>
    <label>Claim Financial</label>
</RecordType>