force-app/main/default/objects/Claims_Progression__c/recordTypes/VG_Claim_Recovery.recordType-meta.xml
<RecordType>
    <fullName>VG_Claim_Recovery</fullName>
    <active>true</active>
    <label>Claim Recovery</label>
</RecordType>